--- a/index.html
+++ b/index.html
@@ -443,8 +443,7 @@ function buildLaser() {
 }
 
 function doGrab(controller) {
-    // List all objects you want to be "grab-able" here
-    const objects = [scene.getObjectByName("Teapot"), eyeScene.getObjectByName("Head")].filter(obj=>obj);
+    const objects = [scene.getObjectByName("Teapot")].filter(obj => obj);
     tempMatrix.identity().extractRotation(controller.matrixWorld);
     raycaster.ray.origin.setFromMatrixPosition(controller.matrixWorld);
     raycaster.ray.direction.set(0,0,-1).applyMatrix4(tempMatrix);
